--- a/TODO.txt
+++ b/TODO.txt
@@ -24,6 +24,7 @@ run_user interface perhaps?
 comments on code
 Double check that the test functions are working
 perhaps more illustrations in theory?
+Do we need to plot a loss function for the logistic regression?
 
 Michael: update run_all.sh
 
